plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.tecnologiadevalor'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.postgresql:postgresql'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.15.2'
	testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.15.2'
	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.4'
	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.11.4'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	jvmArgs = jvmArgs + ["-XX:+EnableDynamicAgentLoading", "-Xshare:off"]

	testLogging {
		events "PASSED", "FAILED", "SKIPPED"
		showStandardStreams = true
	}
}
